--- a/surveySummary.ipynb
+++ b/surveySummary.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Data Analysis of the 2023 Stack Overview Developer Survey**\n",
+    "# **Data Analysis of the 2023 Stack Overflow Developer Survey**\n",
     "\n",
     "In May 2023 over 90,000 developers responded to an annual survey about how they learn and level up, which tools they're using, and which ones they want.\n",
     "\n",
